tests/failure/struct-multiple-unnamed.stderr
error: FromOne can only be used with structs with a single field
 --> tests/failure/struct-multiple-unnamed.rs:4:12
  |
4 | pub struct T(u32, bool);
  |            ^

error[E0308]: mismatched types
 --> tests/failure/struct-multiple-unnamed.rs:7:24
  |
7 |     let _: T = T::from(1);
  |                ------- ^ expected `T`, found integer
  |                |
  |                arguments to this function are incorrect
  |
note: associated function defined here
 --> $RUST/core/src/convert/mod.rs
  |
  |     fn from(value: T) -> Self;
  |        ^^^^
